update result
